# rai_project

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
input_data/: backgrounds.json  camera_details.json  countries.json  expressions.json  genders.json  lighting.json  moods.json
src/: __init__.py  loader.py  main.py  prompt_generator.py
src/meta_ai_scraper/: meta_ai_scraper.py
src/prompt_generator/: loader.py  prompt_generator.py
tests/: loader_test.py  prompt_generator_test.py
