[project]
name = "rai-project"
version = "0.1.0"
description = "RAI_SE_HOMEWORK"
authors = [
    { name = "Milan Černý", email = "milancerny2{at}seznam.cz" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
[tool.mypy]
mypy_path = "src"
namespace_packages = true
ignore_missing_imports = true