[project]
name = "meta-ai-scraper"
version = "0.1.0"
description = "Meta AI Image Prompt Generator and Scraper"
authors = [
    { name = "Milan Černý"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
]

[project.scripts]
meta_scraper = "main:main"

[tool.uv]
package = true
[tool.pytest.ini_options]
pythonpath = ["src"]
[tool.mypy]
mypy_path = "src"
namespace_packages = true
ignore_missing_imports = true
